# midiscript

./: .gitignore  README.md  midiscript.cabal  miditext.cabal  stack.yaml
misc/: git-mididiff  makeprokeys.hs  mididiff  rbncheck.hs
src/: Main.hs
src/MIDIText/: Base.hs  Parse.y  Scan.x
src/Sound/MIDI/Script/: Base.hs  Parse.y  Read.hs  Scan.x
