Name:               midiscript
Version:            0.0.1
License:            GPL
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && < 5
                    , non-negative
                    , midi
                    , event-list
                    , utility-ht
                    , array
  Exposed-modules:  Sound.MIDI.Script.Base
                    Sound.MIDI.Script.Scan
                    Sound.MIDI.Script.Parse
                    Sound.MIDI.Script.Read
  hs-source-dirs:   src
  ghc-options:      -Wall

Executable midiscript
  Main-Is:          src/Main.hs
  Build-Depends:    base >= 4 && < 5
                    , midi
                    , midiscript
                    , text
                    , bytestring
  ghc-options:      -Wall

Executable rbncheck
  Main-Is:          misc/rbncheck.hs
  Build-Depends:    base >= 4 && < 5
                    , midi
                    , midiscript
                    , event-list
                    , non-negative
                    , transformers
  ghc-options:      -Wall
