Name:               miditext
Version:            0.0.1
License:            GPL
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data

Library
  Build-Depends:    base >= 4 && < 5
                    , non-negative
                    , midi
                    , event-list
                    , utility-ht
                    , array
  Exposed-modules:  MIDIText.Base
                    MIDIText.Scan
                    MIDIText.Parse
  hs-source-dirs:   src
  ghc-options:      -Wall

Executable miditext
  Main-Is:          src/Main.hs
  Build-Depends:    base >= 4 && < 5
                    , midi
                    , miditext
                    , text
                    , bytestring
  ghc-options:      -Wall
